# Lemon

./: .gitignore  .strip_comments.py  CLAUDE.md  README.md  flake.nix  format.sh  lemonwm.scm  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: sync-wiki.py
.github/workflows/: build.yml
assets/: lemon.conf  lemon.desktop
docs/: README.md  architecture-nextgen.md  configuration.md  faq.md  index.md  installation.md  ipc.md  meta.json  nix-options.md  quick-start.md  screenshot.md  why-lemon-is-different.md
docs/bindings/: keys.md
docs/configuration/: basics.md  input.md  monitors.md  xdg-portals.md
docs/visuals/: animations.md  status-bar.md
docs/window-management/: layouts.md  scratchpad.md
mmsg/: arg.h  mmsg.c
nix/: default.nix  generate-options.nix  hm-modules.nix  lib.nix  nixos-modules.nix
protocols/: meson.build
scripts/: bolt-build.sh  pgo-build.sh
src/: idle.h  lemon.c  mango.c  power.h
src/animation/: client.h  common.h  layer.h  spring.h  tag.h
src/client/: client.h  rules.h  states.h
src/clipboard/: clipboard.h
src/common/: surface_cache.h  util.c  util.h
src/config/: parse_config.h
src/data/: static_keymap.h
src/dispatch/: bind_declare.h  bind_define.h  cycler.h
src/ext-protocol/: all.h  content-type.h  dwl-ipc.h  ext-workspace.h  foreign-toplevel.h  tearing.h  text-input.h  wlr_ext_workspace_v1.c  wlr_ext_workspace_v1.h
src/fetch/: client.h  common.h  monitor.h
src/input/: button.h  cursor.h  devices.h  keypress.h  motion.h  pointer.h
src/layout/: arrange.h  dwindle.h  horizontal.h  layers.h  layout.h  scroll.h  vertical.h
src/lifecycle/: client.h  destroy.h  focus.h  listeners.h  monitor.h  xdg.h  xwayland.h
src/output/: outputmgr.h  render.h  updatemons.h
